@@ -1,5 +1,10 @@
 2012-06-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/z80/gen.c:
+	  Improve 16-bit addition with operand in hl and result in iy.
+
+2012-06-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/z80/ralloc2.cc,
 	  src/z80/gen.c:
 	  Improvements to left shift by literal.
